# Boids

./: CMakeLists.txt  makefile
include/glad/: glad.h
src/: Boid.cpp  Boid.h  ShaderProgram.cpp  ShaderProgram.h  Simulation.cpp  Simulation.h  fragmentShader.frag  glad.c  main.cpp  vertexShader.vert
